fix to some alignment

--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -370,6 +370,9 @@ li.auc_show
 .panel-center {
   text-align: center;
 }
+h1.auctions-indx-heading {
+  text-align: center;
+}
 button.top-cta-button.btn-user-auc.back-btn
 {
   width: 10rem;
